# arm-control

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
data/: data without indices.txt  test.csv
include/arm-control/: hello_world.hpp
launch/: hello_world.launch  moveit_remote.launch  moveit_remote_xyz.launch  moveit_remote_xyz.launch~  rosbridge_websocket.launch~  sar_rosbridge_tcpsocket.launch  sar_rosbridge_websocket.launch  virtual_j2n6s300.launch
src/: hello_world.cpp  hello_world_node.cpp
tcpsocket/: TCP_Socket_Client_Example.py
test/: keep_reading.py  keep_rw.py  keep_update.py
websocket/: communicate_w_kinova.html  demo.html  read_ros.html  test_param.py  websocket_roslibpy.py
websocket/html/: communicate_w_kinova.html  communicate_w_kinova_xyz.html  read_ros.html
websocket/py/: keep_sending.py  test_data.txt
