<package format="2">
  <name>arm-control</name>
  <version>1.2.4</version>
  <description>
  This package is for control kinova robot arm.
  </description>
  <maintainer email="zichao@gwu.edu">Zichao Hou</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>